<resources>
    <string name="app_name">Github Client</string>
    <string name="image_descripcion">Descripcion imagen</string>
    <string name="repo_name">Nombre del repositorio</string>
    <string name="repo_descripcion">Descripcion del repositorio</string>
    <string name="repo_lang">Lenguaje</string>
    <string name="test_text">Desea continuar con la accion?</string>
    <string name="save">Guardar</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Eliminar</string>
    <string name="edit">Editar</string>
    <string name="description_edit">Boton para editar descripcion del repositorio</string>
    <string name="description_delete">Boton para eliminar repositorio</string>
    <string name="suggest_description">INGRESA LA NUEVA DESCRIPCION</string>
</resources>
